--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_ru.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_ru.properties
@@ -606,50 +606,50 @@ Every=\u041A\u0430\u0436\u0434\u044B\u0439
 
 #-- Period formats - Should not be translated ----------------------------------#
 
-format.Daily.startDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434
-format.Daily.endDate=''
-format.Weekly.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D
-format.Weekly.endDate =''
-format.WeeklyWednesday.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D
+format.Daily.startDate=yyyy-MM-dd
+format.Daily.endDate=
+format.Weekly.startDate=yyyy 'W' w
+format.Weekly.endDate =
+format.WeeklyWednesday.startDate=yyyy 'W' w
 format.WeeklyWednesday.endDate=
-format.WeeklyThursday.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D
+format.WeeklyThursday.startDate=yyyy 'W' w
 format.WeeklyThursday.endDate=
-format.WeeklySaturday.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D
+format.WeeklySaturday.startDate=yyyy 'W' w
 format.WeeklySaturday.endDate=
-format.WeeklySunday.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D
+format.WeeklySunday.startDate=yyyy 'W' w
 format.WeeklySunday.endDate=
-format.BiWeekly.startDate=\u0433\u0433\u0433\u0433 '\u041D\u0435\u0434' \u043D '\u0434\u043E '
-format.BiWeekly.endDate='\u041D\u0435\u0434' \u043D
-format.Monthly.startDate=\u041C\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.Monthly.endDate =''
-format.BiMonthly.startDate=\u041C\u041C\u041C '\u0434\u043E'
-format.BiMonthly.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.Quarterly.startDate=\u041C\u041C\u041C '\u0434\u043E'
-format.Quarterly.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.SixMonthly.startDate=\u041C\u041C\u041C '\u0434\u043E'
-format.SixMonthly.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.SixMonthlyApril.startDate=\u041C\u041C\u041C '\u0434\u043E'
-format.SixMonthlyApril.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.SixMonthlyNov.startDate=\u041CMM '\u0434\u043E'
-format.SixMonthlyNov.endDate=\u041C\u0435\u0441 \u0433\u0433\u0433\u0433
-format.Yearly.startDate=\u0433\u0433\u0433\u0433
-format.Yearly.endDate =''
-format.TwoYearly.startDate=\u0433\u0433\u0433\u0433 '\u0438'
-format.TwoYearly.endDate=\u0433\u0433\u0433\u0433
-format.OnChange.startDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434 '-'
-format.OnChange.endDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434
-format.Survey.startDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434
-format.Survey.endDate =''
-format.Relative.startDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434 '-'
-format.Relative.endDate=\u0433\u0433\u0433\u0433-\u041C\u041C-\u0434\u0434
-format.FinancialApril.startDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433 '\u0434\u043E'
-format.FinancialApril.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.FinancialJuly.startDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433 '\u0434\u043E'
-format.FinancialJuly.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.FinancialOct.startDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433 '\u0434\u043E'
-format.FinancialOct.endDate=\u041C\u041C\u041C \u0433\u0433\u0433\u0433
-format.FinancialNov.startDate=\u041CMM \u0433\u0433\u0433\u0433 '\u0434\u043E '
-format.FinancialNov.endDate=\u041CMM \u0433\u0433\u0433\u0433
+format.BiWeekly.startDate=yyyy 'W' w '\u043f\u043e '
+format.BiWeekly.endDate='W' w
+format.Monthly.startDate=MMMM yyyy
+format.Monthly.endDate =
+format.BiMonthly.startDate=MMM '\u043f\u043e '
+format.BiMonthly.endDate=MMM yyyy
+format.Quarterly.startDate=MMM '\u043f\u043e '
+format.Quarterly.endDate=MMM yyyy
+format.SixMonthly.startDate=MMM '\u043f\u043e '
+format.SixMonthly.endDate=MMM yyyy
+format.SixMonthlyApril.startDate=MMM '\u043f\u043e '
+format.SixMonthlyApril.endDate=MMM yyyy
+format.SixMonthlyNov.startDate=MMM '\u043f\u043e '
+format.SixMonthlyNov.endDate=MMM yyyy
+format.Yearly.startDate=yyyy
+format.Yearly.endDate =
+format.TwoYearly.startDate=yyyy '\u0438 '
+format.TwoYearly.endDate=yyyy
+format.OnChange.startDate=yyyy-MM-dd '- '
+format.OnChange.endDate=yyyy-MM-dd
+format.Survey.startDate=yyyy-MM-dd
+format.Survey.endDate =
+format.Relative.startDate=yyyy-MM-dd '- '
+format.Relative.endDate=yyyy-MM-dd
+format.FinancialApril.startDate=MMM yyyy '\u043f\u043e '
+format.FinancialApril.endDate=MMM yyyy
+format.FinancialJuly.startDate=MMM yyyy '\u043f\u043e '
+format.FinancialJuly.endDate=MMM yyyy
+format.FinancialOct.startDate=MMM yyyy '\u043f\u043e '
+format.FinancialOct.endDate=MMM yyyy
+format.FinancialNov.startDate=MMM yyyy '\u043f\u043e '
+format.FinancialNov.endDate=MMM yyyy
 
 #-- Months and weeks -----------------------------------------------------------#
 
