fix: correct import-export app translations DHIS2-7536 (master)

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_vi.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_vi.properties
@@ -50,7 +50,7 @@ dhis-web-maintenance-appmanager=Qu\u1EA3n tr\u1ECB \u1EE9ng d\u1EE5ng
 dhis-web-caseentry=Qu\u1EA3n l\u00FD d\u1EEF li\u1EC7u c\u00E1 th\u1EC3 
 dhis-web-dataentry=Nh\u1EADp d\u1EEF li\u1EC7u
 dhis-web-sms=SMS
-dhis-web-importexport=T\u00EDch h\u1EE3p - Tr\u00EDch xu\u1EA5t
+dhis-web-import-export=T\u00EDch h\u1EE3p - Tr\u00EDch xu\u1EA5t
 dhis-web-data-quality=Ch\u1EA5t l\u01B0\u1EE3ng d\u1EEF li\u1EC7u 
 dhis-web-mapping=B\u1EA3n \u0111\u1ED3
 dhis-web-event-capture=Ghi s\u1EF1 ki\u1EC7n
@@ -91,7 +91,7 @@ intro_dhis-web-maintenance-mobile=Qu\u1EA3n l\u00FD t\u1EADp thi\u1EBFt l\u1EADp
 intro_dhis-web-maintenance-appmanager=Truy c\u1EADp v\u00E0 \u0111\u0103ng t\u1EA3i c\u00E1c \u1EE9ng d\u1EE5ng, g\u1ED3m c\u00E1c \u1EE9ng d\u1EE5ng m\u1EDF r\u1ED9ng c\u00F3 giao di\u1EC7n chu\u1EA9n \u0111\u1ED1i v\u1EDBi ng\u01B0\u1EDDi d\u00F9ng.
 intro_dhis-web-caseentry=\u0110\u0103ng k\u00ED ng\u01B0\u1EDDi th\u1EE5 h\u01B0\u1EDFng, nh\u1EADp d\u1EEF li\u1EC7u cho c\u00E1c cu\u1ED9c g\u1EB7p, s\u1EF1 ki\u1EC7n v\u00E0 xem c\u00E1c b\u00E1o c\u00E1o.
 intro_dhis-web-dataentry=Nh\u1EADp li\u1EC7u cho m\u1EABu theo ch\u1EBF \u0111\u1ED9 c\u00F3 Internet ho\u1EB7c kh\u00F4ng c\u00F3 Internet, ki\u1EC3m tra d\u1EEF li\u1EC7u v\u00E0 xem t\u00ECnh tr\u1EA1ng d\u1EEF li\u1EC7u.
-intro_dhis-web-importexport=Nh\u1EADp v\u00E0 xu\u1EA5t d\u1EEF li\u1EC7u trong DHIS ho\u1EB7c b\u00EAn th\u1EE9 3 v\u1EDBi nhi\u1EC1u \u0111\u1ECBnh d\u1EA1ng kh\u00E1c nhau.
+intro_dhis-web-import-export=Nh\u1EADp v\u00E0 xu\u1EA5t d\u1EEF li\u1EC7u trong DHIS ho\u1EB7c b\u00EAn th\u1EE9 3 v\u1EDBi nhi\u1EC1u \u0111\u1ECBnh d\u1EA1ng kh\u00E1c nhau.
 intro_dhis-web-validationrule=\u0110\u00E1nh gi\u00E1 v\u00E0 truy xu\u1EA5t ch\u1EA5t l\u01B0\u1EE3ng d\u1EEF li\u1EC7u b\u1EB1ng c\u00E1c lu\u1EADt ki\u1EC3m tra ho\u1EB7c c\u00E1c ph\u01B0\u01A1ng ph\u00E1p th\u1ED1ng k\u00EA
 intro_dhis-web-mapping=Tr\u1EF1c quan h\u00F3a d\u1EEF li\u1EC7u tr\u00EAn b\u1EA3n \u0111\u1ED3 s\u1EED d\u1EE5ng ranh gi\u1EDBi, \u0111i\u1EC3m ho\u1EB7c bi\u1EC3u t\u01B0\u1EE3ng tr\u00EAn nhi\u1EC1u l\u1EDBp.
 intro_dhis-web-reporting=Ph\u00E2n t\u00EDch d\u1EEF li\u1EC7u b\u1EB1ng vi\u1EC7c \u0111\u1ECBnh ngh\u0129a s\u1EB5n, c\u00E1c c\u00F4ng c\u1EE5 b\u00E1o c\u00E1o \u0111\u1ED9ng v\u00E0 xem t\u1EA7n xu\u1EA5t b\u00E1o c\u00E1o.
@@ -131,7 +131,7 @@ M_dhis-web-data-administration=Xem \u1EE9ng d\u1EE5ng Qu\u1EA3n Tr\u1ECB D\u1EEF
 M_dhis-web-maintenance-settings=Xem \u1EE9ng d\u1EE5ng C\u00E0i \u0111\u1EB7t h\u1EC7 th\u1ED1ng
 M_dhis-web-maintenance-appmanager=Xem ch\u1EE9c n\u0103ng Qu\u1EA3n l\u00FD \u1EE9ng d\u1EE5ng
 M_dhis-web-dataentry=Xem module Nh\u1EADp D\u1EEF Li\u1EC7u
-M_dhis-web-importexport=Xem ch\u1EE9c n\u0103ng T\u00EDch H\u1EE3p - Xu\u1EA5t Tr\u00EDch d\u1EEF li\u1EC7u
+M_dhis-web-import-export=Xem ch\u1EE9c n\u0103ng T\u00EDch H\u1EE3p - Xu\u1EA5t Tr\u00EDch d\u1EEF li\u1EC7u
 M_dhis-web-datamart=Xem ch\u1EE9c n\u0103ng T\u1ED5ng H\u1EE3p D\u1EEF Li\u1EC7u c\u1EA5p
 M_dhis-web-validationrule=Xem ch\u1EE9c n\u0103ng Ki\u1EC3m Tra H\u1EE3p L\u1EC7
 M_dhis-web-gis=Xem \u1EE9ng d\u1EE5ng B\u1EA3n \u0111\u1ED3
