--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_zh.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_zh.properties
@@ -175,7 +175,7 @@ pdf_reader=PDF\u9605\u8BFB\u5668
 ireport_description=\u6807\u51C6\u62A5\u8868\u8BBE\u8BA1\u5668
 report_designer=\u62A5\u8868\u8BBE\u8BA1\u5668
 my_datamart=\u6211\u7684\u6570\u636E\u96C6\u5E02
-dhis-web-importexport=\u6570\u636E\u5BFC\u5165\u5BFC\u51FA
+dhis-web-import-export=\u6570\u636E\u5BFC\u5165\u5BFC\u51FA
 my_datamart_description=\u79BB\u7EBF\u6570\u636E\u5206\u6790\u7528\u672C\u5730\u6570\u636E\u96C6\u5E02
 mobile_client=\u79FB\u52A8\u5BA2\u6237
 mobile_client_description=\u79FB\u52A8\u8BBE\u5907\u6570\u636E\u91C7\u96C6\u5BA2\u6237\u7AEF
@@ -414,7 +414,7 @@ liberia=\u5229\u6BD4\u91CC\u4E9A
 malawi=\u9A6C\u62C9\u7EF4
 mali=\u9A6C\u91CC
 mozambique=\u83AB\u6851\u6BD4\u514B
-intro_dhis-web-importexport=\u5BFC\u5165\u548C\u5BFC\u51FA\u6570\u636E\uFF0C\u4ECE\u672C\u7CFB\u7EDF\u6216\u7B2C\u4E09\u65B9\u7CFB\u7EDF\uFF0C\u4F7F\u7528\u5185\u90E8\u548C\u901A\u7528\u683C\u5F0F
+intro_dhis-web-import-export=\u5BFC\u5165\u548C\u5BFC\u51FA\u6570\u636E\uFF0C\u4ECE\u672C\u7CFB\u7EDF\u6216\u7B2C\u4E09\u65B9\u7CFB\u7EDF\uFF0C\u4F7F\u7528\u5185\u90E8\u548C\u901A\u7528\u683C\u5F0F
 namibia=\u7EB3\u7C73\u6BD4\u4E9A
 niger=\u5C3C\u65E5\u5C14
 norway=\u632A\u5A01
@@ -456,7 +456,7 @@ F_USERROLE_DELETE=\u5220\u9664\u7528\u6237\u89D2\u8272
 F_USERROLE_LIST=\u7528\u6237\u89D2\u8272\u5217\u8868
 F_USERGROUP_PUBLIC_ADD=\u6DFB\u52A0\u7528\u6237\u7EC4
 F_USERGROUP_DELETE=\u5220\u9664\u7528\u6237\u7EC4
-M_dhis-web-importexport=\u5BFC\u5165\u5BFC\u51FA
+M_dhis-web-import-export=\u5BFC\u5165\u5BFC\u51FA
 F_USERGROUP_LIST=\u7528\u6237\u7EC4\u5217\u8868
 F_USER_ADD=\u6DFB\u52A0\u7528\u6237
 F_USER_DELETE=\u5220\u9664\u7528\u6237
